PanelForce/force-app/main/default/objects/Panel__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>