PanelForce/force-app/main/default/objects/Panel__c/fields/Consent_to_recording__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_recording__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to recording</label>
    <type>Checkbox</type>
</CustomField>