PanelForce/force-app/main/default/objects/Panel__c/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curriculum</label>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>