PanelForce/force-app/main/default/objects/Panel__c/fields/Internet_Connection_Quality__c.field-meta.xml
<CustomField>
    <fullName>Internet_Connection_Quality__c</fullName>
    <label>Internet Connection Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No connection</fullName>
            </value>
            <value>
                <fullName>Unstable</fullName>
            </value>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>