PanelForce/force-app/main/default/objects/Panel__c/fields/Interview_mode__c.field-meta.xml
<CustomField>
    <fullName>Interview_mode__c</fullName>
    <label>Interview mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Google live</fullName>
            </value>
            <value>
                <fullName>Skype</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>