PanelForce/force-app/main/default/objects/Panel__c/fields/Panel_Round__c.field-meta.xml
<CustomField>
    <fullName>Panel_Round__c</fullName>
    <label>Panel Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>