PanelForce/force-app/main/default/objects/Panel__c/fields/Panelist__c.field-meta.xml
<CustomField>
    <fullName>Panelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panelist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>