PanelForce/force-app/main/default/objects/Panel__c/fields/Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Recording_Link__c</fullName>
    <label>Recording Link</label>
    <type>Url</type>
</CustomField>