PanelForce/force-app/main/default/objects/Panel__c/fields/Training_track__c.field-meta.xml
<CustomField>
    <fullName>Training_track__c</fullName>
    <label>Training track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java full stack</fullName>
            </value>
            <value>
                <fullName>Java full stack senior</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Business analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>